--- a/accounts/templates/dashboard.html
+++ b/accounts/templates/dashboard.html
@@ -15,7 +15,7 @@
     </div>
     <div lass="dashboard-body">
         <h1>Bem-vindo ao Dashboard, {{ user.username }}</h1>
-        <!-- Adicione informações sobre a empresa, tipo de serviços, preços, etc. -->
+        <!-- Implementar aqui. -->
     </div>
 
     <!-- Importe os arquivos JavaScript aqui -->
