--- a/templates/static/teste.css
+++ b/templates/static/teste.css
@@ -1,13 +1,6 @@
-* {
+body {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    list-style: none;
-    text-decoration: none;
-    font-family: sans-serif;
-}
-
-body {
     background-image: url("../static/images/RPrice.png");
     background-size: cover;
     background-repeat: no-repeat;
@@ -60,22 +53,13 @@ h1 {
     border-radius: 0 10px 10px 0;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
     align-items: center;
 }
 
 .infos {
     width: 100%;
-    padding-bottom: 10px;
+    background-color: red;
     text-align: end;
-}
-
-.infos > p {
-    font-size: 10px;
-}
-
-.alert-danger {
-    color: red;
 }
 
 .input-group {
@@ -107,4 +91,30 @@ h1 {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+}
+.sidebar {
+    height: 100%;
+    width: 250px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: #333;
+    padding-top: 20px;
+    color: #fff;
+}
+
+.sidebar a {
+    display: block;
+    color: #fff;
+    padding: 8px;
+    text-decoration: none;
+}
+
+.sidebar a:hover {
+    background-color: #555;
+}
+
+.content {
+    margin-left: 250px;
+    padding: 20px;
 }
