front do primeiro acesso

--- a/accounts/templates/recuperar_senha.html
+++ b/accounts/templates/recuperar_senha.html
@@ -34,7 +34,7 @@
           </div>
           <div class="infos">
             <p>
-              Primeiro acesso?<a href="{% url 'primeiro_acesso' %}"> Clique aqui</a>
+              Primeiro acesso?<a href="#"> Clique aqui</a>
             </p>
             <p>
               Esqueci <a href="#">minha senha!</a>
