front do recuperar senha

--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -37,7 +37,7 @@
               Primeiro acesso?<a href="{% url 'primeiro_acesso' %}"> Clique aqui</a>
             </p>
             <p>
-              Esqueci <a href="#">minha senha!</a>
+              Esqueci <a href="{% url 'recuperar_senha' %}">minha senha!</a>
             </p>
           </div>
           <div class="button-group">
