--- a/accounts/templates/css/styles.css
+++ b/accounts/templates/css/styles.css
@@ -78,6 +78,19 @@ h1 {
     color: red;
 }
 
+.input-title {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 15px;
+}
+
+h3 {
+    width: 100%;
+    text-align: center;
+    padding-bottom: 15px;
+}
+
 .input-group {
     width: 100%;
     display: flex;
