--- a/accounts/templates/primeiro_acesso.html
+++ b/accounts/templates/primeiro_acesso.html
@@ -19,6 +19,10 @@
         {% endif %}
         <form method="post">
           {% csrf_token %}
+          <div class="input-title">
+            <h3>Cadastro de Usuário</h3>
+          </div>
+
           <div class="input-group">
             <label for="instituicao">Instituição:</label>
             <input type="text" id="instituicao" name="instituicao" required />
@@ -37,7 +41,6 @@
           <div class="button-group">
             <button type="submit">Cadastrar</button>
           </div>
-
         </form>
       </div>
     </div>
