--- a/accounts/templates/recuperar_senha.html
+++ b/accounts/templates/recuperar_senha.html
@@ -20,29 +20,28 @@
         <form method="post">
           {% csrf_token %}
           <div class="input-group">
+            <h3>Recuperação de Senha</h3>    
+          </div>    
+
+          <div class="input-group">
             <label for="instituicao">Instituição:</label>
             <input type="text" id="instituicao" name="instituicao" required />
           </div>
 
           <div class="input-group">
-            <label for="username">Login:</label>
-            <input type="text" id="username" name="username" required />
+            <label for="login">Matrícula ou CPF:</label>
+            <input type="text" id="login" name="login" required />
           </div>
+
           <div class="input-group">
-            <label for="password">Senha:</label>
-            <input type="password" id="password" name="password" required />
+            <label for="username">E-mail:</label>
+            <input type="text" id="email" name="email" required />
           </div>
-          <div class="infos">
-            <p>
-              Primeiro acesso?<a href="#"> Clique aqui</a>
-            </p>
-            <p>
-              Esqueci <a href="#">minha senha!</a>
-            </p>
-          </div>
+
           <div class="button-group">
-            <button type="submit">Acessar</button>
+            <button type="submit">Enviar</button>
           </div>
+
         </form>
       </div>
     </div>
