--- a/accounts/templates/dashboard.html
+++ b/accounts/templates/dashboard.html
@@ -10,7 +10,7 @@
 <body class="dashboard-body">
     <div class="sidebar">
         <a href="#"><img src="{% static 'images/RPrice.png' %}" alt="RPrice Logo"></a>
-        <a href="#">Calcular</a>
+        <a href="#">Calculadora de Serviços</a>
         <a href="{% url 'logout' %}">Sair</a>
     </div>
     <div lass="dashboard-body">
