--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -40,9 +40,8 @@
               Esqueci <a href="{% url 'recuperar_senha' %}">minha senha!</a>
             </p>
           </div>
-          <div class="button-group">
+          <div class="button">
             <button type="submit">Acessar</button>
-          </div>
         </form>
       </div>
     </div>
