--- a/accounts/templates/pagina_email_enviado.html
+++ b/accounts/templates/pagina_email_enviado.html
@@ -8,8 +8,8 @@
   <body>
     <div class="container">
       <h1>E-mail enviado com sucesso!</h1>
-      <p>Um e-mail com um link para concluir o cadastro foi enviado para o endereço informado.</p>
-      <p>Por favor, verifique sua caixa de entrada e siga as instruções para concluir o cadastro.</p>
+      <p>Um e-mail com um link para concluir o cadastro foi enviado para o endereço informado</p>
+      <p>Por favor, verifique sua caixa de entrada e siga as instruções para concluir o cadastro</p>
     </div>
   </body>
 </html>
