--- a/accounts/templates/primeiro_acesso.html
+++ b/accounts/templates/primeiro_acesso.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="container-left">Uma imagem aqui!!!!!!</div>
+      <div class="container-left">Uma imagem aqui !</div>
       <div class="container-right">
         <h1>RPrice</h1>
         {% if messages %}
