--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 <body class="dashboard-body">
+    {% if request.user.is_superuser %}
+    <h1>
+        Usuário Admin
+    </h1>
+    {% endif %}
     <div class="sidebar">
         <a href="#"><img src="{% static 'images/RPrice.png' %}" alt="RPrice Logo"></a>
         <a href="#">Calculadora de Serviços</a>
