--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -1,49 +1,51 @@
+{% load static %}
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html data-bs-theme="light" lang="pt-br">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login</title>
-    <link rel="stylesheet" href="/static/styles.css" />
-    <script defer src="/static/js/criar_funcao_aqui.js"></script>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
+    <title>tela_login</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
   </head>
-  <body>
-    <div class="container">
-      <div class="container-left">Uma imagem aqui!!!!!!</div>
-      <div class="container-right">
-        <h1>RPrice</h1>
-        {% if messages %}
-          {% for message in messages %}
-            <div class="alert alert-danger">{{ message }}</div>
-          {% endfor %}
-        {% endif %}
-        <form method="post">
-          {% csrf_token %}
-          <div class="input-group">
-            <label for="instituicao">Instituição:</label>
-            <input type="text" id="instituicao" name="instituicao" required />
-          </div>
-
-          <div class="input-group">
-            <label for="username">Login:</label>
-            <input type="text" id="username" name="username" required />
-          </div>
-          <div class="input-group">
-            <label for="password">Senha:</label>
-            <input type="password" id="password" name="password" required />
-          </div>
-          <div class="infos">
-            <p>
-              Primeiro acesso?<a href="{% url 'primeiro_acesso' %}"> Clique aqui</a>
-            </p>
-            <p>
-              Esqueci <a href="{% url 'recuperar_senha' %}">minha senha!</a>
-            </p>
-          </div>
-          <div class="button">
-            <button type="submit">Acessar</button>
-        </form>
+  <body class="d-xl-flex justify-content-xl-center align-items-xl-center" style="background: #F5F5F5;">
+    <!-- Start: 1 Row 2 Columns -->
+    <div class="container" style="background: var(--bs-body-bg);height: 100%;margin-top: 90px;width: 1140px;max-width: 1140px;padding-left: 0px;padding-right: 0px;">
+      <div class="row" style="width: 100%;max-width: 1140px;margin-right: 0px;margin-left: 0px;">
+        <div class="col-md-6" style="width: 570px;height: 550px;max-width: 570px;padding-right: 0px;padding-left: 0px;">
+          <div style="height: 550px;width: 100%;background: url('{% static "assets/img/fundo_login.png" %}') center / cover no-repeat;"></div>
+        </div>
+        <div class="col-md-6 d-xl-flex justify-content-xl-center align-items-xl-start" style="border-style: none;height: 550px;width: 570px;max-width: 570px;padding-right: 0px;padding-left: 0px;">
+          <div class="d-flex d-lg-flex d-xl-flex d-xxl-flex flex-column justify-content-center flex-lg-column justify-content-lg-center align-items-lg-center align-content-lg-center align-self-lg-center flex-xl-column justify-content-xl-center align-items-xl-center align-content-xl-center align-self-xl-center flex-xxl-column justify-content-xxl-center align-items-xxl-center align-content-xxl-center align-self-xxl-center" style="height: 550px;width: 100%;">
+            <div style="height: 150px;margin-top: 50px;margin-bottom: 50px;background: url('{% static "assets/img/rprice_logo_280_150.png" %}') center / contain no-repeat;width: 280px;"></div>
+                {% if messages %}
+                    {% for message in messages %}
+                        <div class="alert alert-danger">{{ message }}</div>
+                    {% endfor %}
+                {% endif %}
+                <form action="{% url 'login' %}" method="post">
+                    {% csrf_token %}
+                    <div style="height: 44px;width: 280px;background: #f9f9f9;border-radius: 5px;margin-bottom: 15px;">
+                        <i class="fa fa-user" style="color: rgb(152,152,152);margin-left: 12px;padding-top: 15px;font-size: 19px;"></i>
+                        <input class="placeholder focus-ring focus-ring-light" type="text" id="username" name="username" style="background: #f9f9f9;margin-left: 10px;color: rgb(152,152,152);width: 220px;height: 36px;padding-bottom: 10px;border-style: none;" placeholder="Matrícula ou CPF" required="" />
+                    </div>
+                    <div class="focus-ring" style="height: 44px;width: 280px;background: #f9f9f9;border-radius: 5px;margin-bottom: 15px;">
+                        <i class="fa fa-lock" style="color: rgb(152,152,152);margin-left: 12px;padding-top: 15px;font-size: 19px;"></i>
+                        <input class="placeholder focus-ring focus-ring-light" type="password" id="password" name="password" style="width: 220px;height: 36px;padding-bottom: 10px;margin-left: 10px;background: #f9f9f9;border-style: none;" placeholder="Senha" required="" />
+                    </div>
+                    <div style="height: 44px; width: 280px; background: #251F4D; border-radius: 5px; margin-bottom: 5px; display: flex; justify-content: center; align-items: center;">
+                        <button type="submit" id="entrar-button" style="color: #ffffff; font-size: 16px; font-weight: bold; text-align: center; border: none; background: none;">Entrar</button>
+                    </div>
+                    <div>
+                        <p style="width: 280px;font-size: 14px;text-align: center;">Esqueceu a senha?</p>
+                    </div>
+                </form>
+            </div>
+        </div>
       </div>
     </div>
+    <!-- End: 1 Row 2 Columns -->
   </body>
 </html>
