--- a/accounts/templates/recuperar_senha.html
+++ b/accounts/templates/recuperar_senha.html
@@ -1,49 +1,50 @@
+{% load static %}
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html data-bs-theme="light" lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login</title>
-    <link rel="stylesheet" href="/static/styles.css" />
-    <script defer src="/static/js/criar_funcao_aqui.js"></script>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
+    <title>tela_esqueceu_senha</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
   </head>
-  <body>
-    <div class="container">
-      <div class="container-left">Uma imagem aqui!!!!!!</div>
-      <div class="container-right">
-        <h1>RPrice</h1>
-        {% if messages %}
-          {% for message in messages %}
-            <div class="alert alert-danger">{{ message }}</div>
-          {% endfor %}
-        {% endif %}
-        <form method="post">
-          {% csrf_token %}
-          <div class="input-group">
-            <h3>Recuperação de Senha</h3>    
-          </div>    
-
-          <div class="input-group">
-            <label for="instituicao">Instituição:</label>
-            <input type="text" id="instituicao" name="instituicao" required />
+  <body style="background: #F5F5F5;">
+    <!-- Start: 1 Row 1 Column -->
+    <div class="container" style="width: 100%;height: 100%;padding-right: 0px;padding-left: 0px;margin-top: 90px;min-width: auto;max-width: 100%;margin-right: 0px;margin-left: 0px;">
+      <div class="row justify-content-center" style="width: 100%;max-width: 100%;margin-right: 0px;margin-left: 0px;min-width: auto;">
+        <div class="col-md-6" style="border-style: none;height: 550px;width: 80%;max-width: 80%;padding-right: 0px;padding-left: 0px;min-width: auto;">
+          <div class="focus-ring focus-ring-light d-flex flex-column justify-content-evenly align-items-center" style="height: 550px;width: 100%;background: #ffffff;max-width: 100%;min-width: auto;">
+            <div class="d-flex" style="width: 100%;margin-left: 0px;">
+              <a href="{% url 'login' %}" style="text-decoration: none; color: rgb(152, 152, 152); display: flex; align-items: center;">
+                <i class="fa fa-mail-reply" style="color: rgb(152, 152, 152); padding-left: 20px; width: 36px; height: 24px;"></i>
+                <p style="width: 100px; padding-left: 10px; padding-bottom: 0px; margin-bottom: 0px;">Voltar</p>
+              </a>
+            </div>
+            <div style="height: 150px;margin-top: 50px;margin-bottom: 50px;background: url('{% static "assets/img/rprice_logo_280_150.png" %}') center / contain no-repeat;width: 280px;"></div>
+            <div style="height: 44px;width: 350px;background: #ffffff;border-radius: 5px;margin-bottom: 15px;">
+              <p style="text-align: center;font-size: 14px;font-weight: bold;margin-bottom: 0px;">Esqueceu a senha?&nbsp;</p>
+              <p style="font-size: 14px;width: 350px;text-align: center;">Uma redefinição de senha será encaminhada para você!</p>
+            </div>
+            {% if messages %}
+              {% for message in messages %}
+                <div class="alert alert-danger">{{ message }}</div>
+              {% endfor %}
+            {% endif %}
+            <form method="post">
+              {% csrf_token %}
+                <div class="focus-ring" style="height: 44px;width: 280px;background: #f9f9f9;border-radius: 5px;margin-bottom: 15px;">
+                  <i class="fa fa-envelope" style="color: rgb(152,152,152);margin-left: 12px;padding-top: 15px;font-size: 19px;"></i>
+                  <input class="placeholder focus-ring focus-ring-light" type="text" id="email" name="email" style="background: #f9f9f9;margin-left: 10px;color: rgb(152,152,152);width: 220px;height: 36px;padding-bottom: 10px;border-style: none;padding-left: 5px;" placeholder="Informe seu e-mail" required="" />
+                </div>
+                <div style="height: 44px; width: 280px; background: #251F4D; border-radius: 5px; margin-bottom: 5px; display: flex; justify-content: center; align-items: center;">
+                  <button type="submit" id="senha-button" style="color: #ffffff; font-size: 16px; font-weight: bold; text-align: center; border: none; background: none;">Recuperar Senha</button>
+                </div>
+            </form>
           </div>
-
-          <div class="input-group">
-            <label for="login">Matrícula ou CPF:</label>
-            <input type="text" id="login" name="login" required />
-          </div>
-
-          <div class="input-group">
-            <label for="username">E-mail:</label>
-            <input type="text" id="email" name="email" required />
-          </div>
-
-          <div class="button-group">
-            <button type="submit">Enviar</button>
-          </div>
-
-        </form>
+        </div>
       </div>
     </div>
+    <!-- End: 1 Row 1 Column -->
   </body>
 </html>
