--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -1,3 +1,4 @@
+{% load bootstrap4 %}
 {% load static %}
 <!DOCTYPE html>
 <html data-bs-theme="light" lang="pt-br">
@@ -5,54 +6,57 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
     <title>tela_login</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="{% static 'assets/bootstrap/css/bootstrap.min.css' %}" />
+    <link rel="stylesheet" href="{% static 'assets/fonts/font-awesome.min.css' %}" />
+    <link rel="stylesheet" href="{% static 'assets/css/login.css' %}" />
+    <script src="{% static 'assets/js/criar_funcao_aqui.js' %}"></script>
+    {% bootstrap_css %}
+    {% comment %} <script src="{% static 'assets/js/jquery.min.js' %}"></script> {% endcomment %}
+    {% comment %} <script src="{% static 'assets/bootstrap/js/bootstrap.min.js' %}"></script> {% endcomment %}
   </head>
-  <body class="d-xl-flex justify-content-xl-center align-items-xl-center" style="background: #F5F5F5;">
-    <!-- Start: 1 Row 2 Columns -->
-    <div class="container" style="background: var(--bs-body-bg);height: 100%;margin-top: 90px;width: 80%;max-width: 80%;padding-left: 0px;padding-right: 0px;">
-      <div class="row justify-content-center" style="width: 100%;max-width: 100%;margin-right: 0px;margin-left: 0px;">
-        <div class="col-md-6" style="width: 50%;height: 550px;max-width: 50%;padding-right: 0px;padding-left: 0px;min-width: AUTO;">
-          <div class="visible" style="height: 550px;width: 100%;background: url('{% static "assets/img/fundo_login.png" %}') center / cover no-repeat;"></div>
+
+  <body class="fundo">
+    <div class="container pl-0 pr-0">
+      <div class="row justify-content-center pl-0 pr-0 no-gutters">
+        <div class="col-md-6 div-left pl-0 pr-0">
+          <div class="visible div-left-img"></div>
         </div>
-        <div class="col-md-6" style="border-style: none;height: 550px;width: 50%;max-width: 50%;padding-right: 0px;padding-left: 0px;">
-          <div class="d-flex flex-column justify-content-center align-items-center" style="height: 550px;width: 100%;max-width: 100%;">
-            <div style="height: 150px;margin-top: 50px;margin-bottom: 50px;background: url('{% static "assets/img/rprice_logo_280_150.png" %}') center / contain no-repeat;width: 280px;"></div>
-                {% if messages %}
-                    {% for message in messages %}
-                        <div class="alert alert-danger">{{ message }}</div>
-                    {% endfor %}
-                {% endif %}
-                <form action="{% url 'login' %}" method="post">
-                    {% csrf_token %}
-                        <div style="height: 44px;width: 280px;background: #f9f9f9;border-radius: 5px;margin-bottom: 15px;">
-                            <i class="fa fa-user" style="color: rgb(152,152,152);margin-left: 12px;padding-top: 15px;font-size: 19px;"></i>
-                            <input class="placeholder focus-ring focus-ring-light" type="text" id="username" name="username" style="background: #f9f9f9;margin-left: 10px;color: rgb(152,152,152);width: 220px;height: 36px;padding-bottom: 10px;border-style: none;" placeholder="Matrícula ou CPF" required="" />
-                        </div>
-                        <div class="focus-ring" style="height: 44px;width: 280px;background: #f9f9f9;border-radius: 5px;margin-bottom: 15px;">
-                            <i class="fa fa-lock" style="color: rgb(152,152,152);margin-left: 12px;padding-top: 15px;font-size: 19px;">                            
-                            </i><input class="placeholder focus-ring focus-ring-light" type="password" id="password" name="password" style="width: 220px;height: 36px;padding-bottom: 10px;margin-left: 10px;background: #f9f9f9;border-style: none;" placeholder="Senha" required="" />
-                        </div>
-                        <div style="height: 44px; width: 280px; background: #251F4D; border-radius: 5px; margin-bottom: 5px; display: flex; justify-content: center; align-items: center;">
-                          <button type="submit" id="entrar-button" style="color: #ffffff; font-size: 16px; font-weight: bold; text-align: center; border: none; background: none;">Entrar</button>
-                        </div>
-                        <div>
-                            <p style="width: 280px;font-size: 14px;text-align: center;margin-bottom: 0px;text-decoration:  underline;">
-                              <a href="{% url 'primeiro_acesso' %}">Primeiro acesso</a>
-                            </p>
-                        </div>
-                        <div>
-                            <p style="width: 280px;font-size: 14px;text-align: center;">
-                              <a href="{% url 'recuperar_senha' %}">Esqueceu a senha?</a>
-                            </p>
-                        </div>
-                </form>
-            </div>
+        <div class="col-md-6 div-right pl-0 pr-0">
+          <div class="d-flex flex-column justify-content-center align-items-center div-right-int">
+            <form class="d-flex flex-column justify-content-center align-items-center form-login" action="{% url 'login' %}" method="post">
+                {% csrf_token %}
+            <div class="div-logo"></div>
+        {% if messages %}
+            {% for message in messages %}
+                <div class="alert alert-danger">{{ message }}</div>
+            {% endfor %}
+        {% endif %}
+                    <div class="div-right-input">
+                        <i class="fa fa-user"></i>
+                        <input class="placeholder focus-ring focus-ring-light" type="text" id="username" name="username" placeholder="Matrícula ou CPF" required="" />
+                    </div>
+                    <div class="focus-ring div-right-input">
+                        <i class="fa fa-lock"></i>
+                        <input class="placeholder focus-ring focus-ring-light" type="password" id="password" name="password" placeholder="Senha" required="" />
+                        <i class="fa fa-eye-slash toggle-password" id="toggle-password"></i>
+                    </div>
+                    <div class="btn-button">
+                      <button class="btn-login" type="submit" id="entrar-button">Entrar</button>
+                    </div>
+                    <div>
+                        <p class="text-primeiro-acesso">
+                            <a href="{% url 'primeiro_acesso' %}">Primeiro acesso</a>
+                        </p>
+                    </div>
+                    <div>
+                        <p class="text-esqueceu-senha">
+                            <a href="{% url 'recuperar_senha' %}">Esqueceu a senha?</a>
+                        </p>
+                    </div>
+          </form>
+          </div>
         </div>
       </div>
     </div>
-    <!-- End: 1 Row 2 Columns -->
   </body>
 </html>
