--- a/static/assets/css/login.css
+++ b/static/assets/css/login.css
@@ -8,43 +8,54 @@
 
 .fundo {
   background: #F5F5F5;
+  overflow-y: hidden;
 }
 
 .container {
   background: #ffffff;
-  height: 100%;
-  margin: 90px;
+  height: 80vh;
+  margin: 40px 0;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   max-width: 100%;
+  position: relative;
   padding-left: 0px;
   padding-right: 0px;
 }
 
 .row {
   width: 100%;
+  height: 80vh;
   max-width: 100%;
   margin-right: 0px;
   margin-left: 0px;
+  position: relative;
 }
 
 .div-left {
   width: 50%;
-  height: 550px;
+  height: 80vh;
   max-width: 50%;
+  position: absolute;
+  left: 0;
+  top: 0;
   padding-right: 0px;
   padding-left: 0px;
   min-width: AUTO;
 }
 
 .div-left-img {
-  height: 550px;
+  height: 80vh;
   width: 100%;
   background: url("../../assets/img/fundo_login.png") center / cover no-repeat;
 }
 
 .div-right {
   border-style: none;
-  height: 550px;
+  height: 100vh;
   width: 50%;
   max-width: 50%;
   padding-right: 0px;
@@ -52,7 +63,7 @@
 }
 
 .div-right-int {
-  height: 550px;
+  height: 100vh;
   width: 100%;
   max-width: 100%;
 }
