Incluindo algumas estruturas de modal e o Back-End do alterar senha no DashBoard

--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="{% static 'assets/bootstrap/css/bootstrap.min.css' %}" />
     <link rel="stylesheet" href="{% static 'assets/fonts/font-awesome.min.css' %}" />
     <link rel="stylesheet" href="{% static 'assets/css/login.css' %}" />
-    <script src="{% static 'assets/js/criar_funcao_aqui.js' %}"></script>
+    <script src="{% static 'assets/js/script_login.js' %}"></script>
     {% bootstrap_css %}
     {% comment %} <script src="{% static 'assets/js/jquery.min.js' %}"></script> {% endcomment %}
     {% comment %} <script src="{% static 'assets/bootstrap/js/bootstrap.min.js' %}"></script> {% endcomment %}
