--- a/static/assets/css/index.css
+++ b/static/assets/css/index.css
@@ -16,7 +16,7 @@
   }
 
   .p-header {
-    margin-right: 20px;
+    margin-right: 3px;
     margin-top: 7px;
     color: rgb(255,255,255);
     font-weight: bold;
@@ -24,7 +24,11 @@
   }
 
   .userName {
+    margin-right: 20px;
+    margin-top: 7px;
     color: #DC2768;
+    font-weight: bold;
+    letter-spacing: 1px;
   }
 
   .fa-user {
