Atualizando Cadastro de Cargo

--- a/accounts/templates/redefinir_senha.html
+++ b/accounts/templates/redefinir_senha.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="{% static 'assets/fonts/font-awesome.min.css' %}" />
     <link rel="stylesheet" href="{% static 'assets/css/login.css' %}" />
     {% bootstrap_css %}
-    <script src="{% static 'assets/js/criar_funcao_aqui.js' %}"></script>
+    <script src="{% static 'assets/js/script_login.js' %}"></script>
     {% comment %} <script src="{% static 'assets/bootstrap/js/bootstrap.min.js' %}"></script> {% endcomment %}
 </head>
 
